--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^10.0.0",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
